--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   <body>
     <div class="content">
       <h2>404 Not found</h2>
-      <p>Ooops. Looks like you followed a dead link.</p>
+      <p>Page you are looking for has gone...</p>
     </div>
   </body>
 </html>
